--- a/Student_information_management_system.vcxproj
+++ b/Student_information_management_system.vcxproj
@@ -57,6 +57,7 @@
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
+      <StructMemberAlignment>1Byte</StructMemberAlignment>
     </ClCompile>
     <Link>
       <TargetMachine>MachineX86</TargetMachine>
